assets/sass/main.scss
@font-face {
  font-family: geist;
  src: url("/fonts/Geist-Bold.woff2") format("woff2");
  font-weight: bold;
}

@font-face {
  font-family: geist;
  src: url("/fonts/Geist-Regular.woff2") format("woff2");
  font-weight: normal;
}

@font-face {
  font-family: geist;
  src: url("/fonts/Geist-Regular.woff2") format("woff2");
  font-style: oblique;
}

@font-face {
  font-family: geist;
  src: url("/fonts/Geist-Bold.woff2") format("woff2");
  font-style: oblique;
  font-weight: bold;
}

@font-face {
  font-family: geist-mono;
  src: url("/fonts/GeistMono-Bold.woff2") format("woff2");
  font-weight: bold;
}

@font-face {
  font-family: geist-mono;
  src: url("/fonts/GeistMono-Regular.woff2") format("woff2");
  font-weight: normal;
}

@font-face {
  font-family: geist-mono;
  src: url("/fonts/GeistMono-Regular.woff2") format("woff2");
  font-style: oblique;
}

@font-face {
  font-family: geist-mono;
  src: url("/fonts/GeistMono-Bold.woff2") format("woff2");
  font-style: oblique;
  font-weight: bold;
}

@import "catppuccin_mocha";

// Variables
$accent: $mauve;

// Default styles
body {
  font-family: "geist-mono";
  background-color: $crust;
  color: $text;
  display: flex;
  flex-direction: column;
  min-height: 100dvh;
  margin: 0;
}

a {
  color: $sky;
}

a:hover {
  text-shadow: rgba($text, 0.9) 0px 0px 39px;
}

a:visited {
  color: $accent;

  &:hover {
    text-shadow: rgba($accent, 0.9) 0px 0px 39px;
  }
}

a.chip {
  border-radius: 50px;
  background-color: rgba($accent, 0.3);
  padding-top: 2px;
  padding-bottom: 2px;
  padding-left: 7px;
  padding-right: 7px;
  width: auto;
  color: $text;
  text-decoration: none;

  &:hover {
    text-shadow: none;
  }
}

header {
  z-index: 999;

  nav {
    text-align: center;
    //padding-top: 10px;

    ul {
      list-style: none;
      padding: 0;
      margin: auto;
      display: flex;
      justify-content: space-between;
      align-items: center;
      width: 60%;

      .nav-item {
        //flex-grow: 1;
        //flex-basis: 0;
        background-color: rgba(0, 0, 0, 0);
      }
    }

    a {
      color: inherit;
      text-decoration: inherit;
    }

    h1 {
      color: $accent;
      font-size: 5em;
      font-style: oblique;
      text-decoration: underline;
      font-weight: normal;
      transition: text-shadow 100ms ease-out;
    }

    h1:hover {
      text-shadow: rgba($accent, 0.9) 0px 0px 39px;
    }

    a:not(:has(h1)) {
      font-size: 1.8em;

      &:before {
        content: "./";
        color: $overlay0;
      }

      &:hover {
        text-decoration: underline;
        text-shadow: rgba($text, 0.9) 0px 0px 39px;
      }

      &:visited {
        color: $text;
      }
    }
  }
}

section#home {
  position: relative;
  width: 100%;
  flex: 1; // Grow under the header
  display: flex; //
  flex-direction: column; //
  align-items: center; // Center the info-box
  justify-content: center; //
  overflow: hidden; // Hide bottom of background
  padding-top: 30px;

  // Info box
  article {
    font-size: 1.6em;
    height: 50vh;

    margin-bottom: 20%;
    width: 50%;
    background-color: rgba($base, 0.5);
    backdrop-filter: blur(10px);
    border: 1px solid $accent;
    border-radius: 5px;
    padding: 30px;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    transition: box-shadow 100ms ease-out;
    display: flex;
    flex-direction: column;
    height: 100%;

    pre {
      margin: 0;
    }

    .command {
      height: 20%;
    }

    .command-result {
      display: flex;
      flex: 1;
    }

    .art {
      width: 20%;
      overflow: hidden;
      color: $accent;
    }

    .specs {
      width: 80%;
      padding-left: 50px;
      text-wrap-mode: wrap;
    }

    .key {
      color: $accent;
    }

    &:hover {
      box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
    }
  }

  .background {
    position: absolute;
    top: 0;
    width: 100%;
    height: 100vh;
    padding-top: 0;
    margin-top: 0;
    cursor: default;
    color: $surface0;
    font-family: "monospace";
    font-size: 3.6em;
    line-height: 58px;
    padding-top: 30px;

    //user-select: none;
    .glow {
      text-shadow: rgba($text, 0.9) 0px 0px 39px;
      color: $text;
    }

    .glow-toggle {
      cursor: pointer;

      &:hover {
        text-shadow: rgba($subtext0, 0.9) 0px 0px 39px;
      }
    }
  }
}

section#list {
  font-family: "geist";
  width: 60%;
  margin-left: auto;
  margin-right: auto;
  display: block;

  height: 100vh;

  article.post {
    padding: 20px;
    margin-bottom: 10px;
    background-color: $base;
    border: 1px solid $overlay0;
    border-radius: 5px;
    transition: border-color 0.1s;

    &:hover {
      border-color: $overlay2;
    }

    .post-title {
      color: $text;
      font-size: 2em;
      text-decoration: none;

      &:hover {
        text-decoration: underline;
      }
    }

    .date {
      color: $subtext0;
    }


  }
}

section#post {
  width: 60%;
  margin: auto;
  font-family: geist;
  font-size: 18px;

  code:not(pre code) {
    background-color: $base;
    border: 1px solid $surface0;
    border-radius: 5px;
  }

  blockquote.alert,
  details {
    margin: 0;
    border-width: 1px;
    border-style: solid;
    border-radius: 5px;
    padding-left: 20px;
    padding-right: 20px;
  }

  details {
    padding-top: 5px;
    padding-bottom: 5px;
    border-color: $accent;
    background-color: rgba($accent, 0.2);

    summary {
      cursor: pointer;
    }
  }

  blockquote {
    overflow-x: scroll;
  }

  blockquote.alert-caution {
    border-color: $yellow;
    background-color: rgba($yellow, 0.2);
  }

  blockquote.alert-important {
    border-color: $red;
    background-color: rgba($red, 0.2);
  }

  blockquote.alert-note {
    border-color: $sky;
    background-color: rgba($sky, 0.2);
  }

  blockquote.alert-tip {
    border-color: $sapphire;
    background-color: rgba($sapphire, 0.2);
  }

  blockquote.alert-warning {
    border-color: $yellow;
    background-color: rgba($yellow, 0.2);
  }

  blockquote.alert-instructions {
    border-color: $blue;
    background-color: rgba($blue, 0.2);
  }

  img {
    display: block;
    max-width: 100%;
    max-height: 900px;
    width: auto;
    height: auto;
    border-radius: 5px;
  }

  div.highlight pre {
    border-radius: 5px;
    padding: 20px;
    overflow: scroll;
  }
}

footer {
  text-align: center;
  width: 100%;
  height: 60px;
}


$layout-breakpoint-small: 960px;

@media (max-width: $layout-breakpoint-small) {
  header {
    nav {

      ul {
        width: 100%;
        justify-content: space-evenly;
      }

      h1 {
        font-size: 2.5em;
      }

      a:not(:has(h1)) {
        font-size: 1em;

        &:before {
          content: "./";
        }
      }
    }
  }

  section#home {
    justify-content: flex-start;

    article {
      width: 80%;
      margin-top: 20%;
      margin-bottom: 0;

      .command span {
        display: none;
      }

      .command:after {
        content: '$ screenfetch';
      }

      .art {
        display: none;
      }

      .specs {
        width: 100%;
        padding-left: 0px;
      }
    }
  }

  section#list {
    width: 90%;

    h1 {
      font-size: 1.7;
    }

    article.post {
      .post-title {
        font-size: 1.6em;
      }
    }
  }

  section#post {
    width: 90%;
  }


}

